# mlx-cgo

./: ACKNOWLEDGMENTS.md  ATTRIBUTION.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  README.md  TEST_REPORT.md  TROUBLESHOOTING.md  coverage.txt  go.mod  mlxgen
.github/workflows/: sync-check.yml
cmd/mlxgen/: main.go
docs/: ARCHITECTURE.md  README.md
internal/cheader/: parse.go
internal/codegen/: c_header.go  c_impl.go  closure.go  cnamespace.go  map.go  private.go  regression_test.go  vector.go
internal/codegen/cgo/: cgo.go  edge_cases_test.go  scaffold.go
internal/hooks/: hooks.go  hooks_test.go
internal/model/: types.go
internal/parser/: ast.go  clang.go  extract.go  parser_test.go
internal/types/: ctypes.go  ctypes_test.go  gotypes.go  types_registry_test.go
internal/variants/: variants.go  variants_test.go
mlx/c/: compile.cpp  compile.h  cuda.cpp  cuda.h  distributed.cpp  export.cpp  export.h  fast.cpp  fast.h  fft.cpp  graph_utils.cpp  graph_utils.h  io.cpp  io.h  linalg.cpp  metal.cpp  ops.cpp  random.cpp  transforms.cpp  transforms.h
mlx/c/private/: closure.h  closure_custom.h  closure_custom_jvp.h  closure_custom_vmap.h  closure_value_and_grad.h  device;mlx_device_info.h  distributed_group.h  map_string_to_array.h  map_string_to_string.h  vector_array.h  vector_int.h  vector_string.h
scripts/: regenerate.sh
